Fixed the button for when reviews are too long to match the right review, and fixed the menu buttons not fitting properly with their words

--- a/All Project code/views/static/styles.css
+++ b/All Project code/views/static/styles.css
@@ -298,7 +298,7 @@ h4 {
 }
 
 .aId {
-  width: 80px;
+  width: 100%;
   border-radius: 10px;
   color: white;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -312,7 +312,7 @@ h4 {
 } 
 
 .aId:hover {
-  width: 80px;
+  width: 100%;
   height: 35px;
   color: white;
   border-radius: 10px;
